fix deprecation warnings
1. Remove usage of unused config method from AtlasRegistry.
2. Fix usage of Class.newInstance().